fix: when Map is expanded it takes the MAX z-index to make underlying layout non-interactible

--- a/src/components/expand/expand.module.scss
+++ b/src/components/expand/expand.module.scss
@@ -4,4 +4,5 @@
 	left: 0;
 	top: 0;
 	border-radius: 0;
+	z-index: 9999;
 }
